fixing modal issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -471,7 +471,7 @@ body.section-0 #map { opacity:0.5; }
     height: 100%;
 }
 
-.formWrapper{
+/*.formWrapper{
     position: relative;
     padding-top: 25px;
     height: 100%;
@@ -483,7 +483,7 @@ body.section-0 #map { opacity:0.5; }
     left: 0;
     width: 100%;
     height: 100%;
-}
+}*/
 
 @media (max-width:640px) {
     body{
@@ -497,7 +497,7 @@ body.section-0 #map { opacity:0.5; }
     }
 
 /*    .formWrapper{
-
+        -webkit-overflow-scrolling: touch;
         max-height: 480px ;
     }*/
 
@@ -561,9 +561,7 @@ body.section-0 #map { opacity:0.5; }
         font-size: 12px;
     }
     #myModal{
-        -webkit-overflow-scrolling: touch;
         top:0;
-        max-height: 460px!important;
     }
     body.reveal-modal{
         position : fixed;
